tests/NormalTests/paczka1/fuzzy1/46050882.err
Error in line 2: HR8RYjB7Z A408 16,8
Error in line 4: PElgi A109 28,1
Error in line 17: jyvo S680 77,8
Error in line 15: GXdojDe A109 43,9
Error in line 35: 54DhHYvb6f5 A474 4,1
